# lini

./: -  .gitignore  AGENT.md  AGENTS.md  ASSEMBLY_LAYOUT.md  AUDIT-charts.md  AUDIT-core.md  AUDIT-drawing.md  AUDIT.md  BETA-tooling.md  CHART-DRAW-alpha23.md  CHARTS-0.2.md  CHARTS.md  Cargo.toml  DRAWING-0.16.md  DRAWING-0.17.md  DRAWING-0.18.md  DRAWING-0.19.md  DRAWING.md  ENTITY_PLAN.md  FLOW-DIRECTION.md  FONT_EMBED.md  GDT-alpha4.md  LINKING.md  PLAN-ALPHA.md  PLAN-NATURAL.md  PLAN-TREE-alpha1.md  PLAN-V1.md  PLAN.md  README.md  ROADMAP-v1.0.md  ROADMAP.md  ROUTING-LOG.md  ROUTING-V2.md  ROUTING.md  ROUTING_DRAFT_v2.md  SHEET-alpha5.md  SPEC.md  SYNTAX-0.10.md  SYNTAX-dims-cardinality.md  (+5 more)
.cargo/: config.toml
.github/workflows/: ci.yml
LICENSES/: phosphor
assets/: flow.lini  hero.lini  phosphor-duotone.txt  shapes.lini
editors/: README.md
editors/vscode/: README.md  language-configuration.json  lini-0.1.0.vsix  package.json
editors/zed/: .gitignore  extension.toml
plans/: CHART-DRAW-alpha23.md  ROUTING-LOG.md  SHEET-alpha5.md
samples/: anchors.lini  captions.lini  cardinality.lini  cards.lini  chart_advanced.lini  chart_annotations.lini  chart_area.lini  chart_axes.lini  chart_bands.lini  chart_bars.lini  chart_bubbles.lini  chart_donut.lini  chart_dual_axis.lini  chart_fn.lini  chart_hero.lini  chart_labels.lini  chart_line.lini  chart_lines.lini  chart_log.lini  chart_outline.lini  chart_pie.lini  chart_points.lini  chart_radar.lini  chart_radial.lini  chart_radial_bar.lini  chart_reversed.lini  chart_row.lini  chart_scatter.lini  chart_segmented.lini  chart_smooth.lini  chart_stacked.lini  chart_step.lini  chart_threshold.lini  charts.lini  css_cascade.lini  desugar.lini  drawing.lini  drawing_annotations.lini  drawing_assembly.lini  drawing_barrel.lini  (+71 more)
schema/: lini.schema.json  reference.md
src/: ast.rs  desugar.rs  error.rs  expr.rs  fmt.rs  lexer.rs  lib.rs  lint.rs  main.rs  parser.rs  span.rs  suggest.rs  theme.rs  validate.rs
src/desugar/: bundles.rs  chrome.rs  classes.rs  drawing.rs  labels.rs  mod.rs  page.rs  scale.rs  scene.rs  tables.rs  titleblock.rs  tree.rs  types.rs
src/error/: codes.rs  mod.rs  tests.rs
src/fmt/: align.rs  tests.rs  trivia.rs
src/font/: metrics.rs  mod.rs
src/glyph/: mod.rs
src/grammar/: mod.rs
src/icon/: mod.rs
src/layout/: anchors.rs  arrange.rs  flex.rs  frame.rs  grid.rs  ir.rs  mod.rs  note.rs  page.rs  path_bbox.rs  pattern.rs  prim.rs  primitives.rs  tests.rs  text.rs  titles.rs  tree.rs  values.rs  wrap.rs
src/ledger/: consts.rs  date.rs  defaults.rs  examples.rs  format.rs  mod.rs  properties.rs
src/palette/: mod.rs  oklch.rs
src/render/: filters.rs  fonts.rs  gradients.rs  icon_fit.rs  intern.rs  knockout.rs  links.rs  markers.rs  mod.rs  paints.rs  primitives.rs  rounding.rs  rules.rs  style_block.rs  text.rs  used_vars.rs  values.rs  wavy.rs  wires.rs
src/resolve/: assets.rs  cascade.rs  defaults.rs  desugar.rs  ir.rs  links.rs  merge.rs  mod.rs  program.rs  scene.rs  shapes.rs  styles.rs  types.rs  value.rs  vars.rs  wires.rs
src/routing/: mod.rs  report.rs  straight.rs  validate.rs
src/schema/: json.rs  mod.rs
src/serve/: dir_mode.rs  file_mode.rs  http.rs  mod.rs  playground.html  single.html
src/syntax/: ast.rs  mod.rs  parser.rs
tests/: .validation.rs.pending-snap  cli.rs  conformance.rs  desugar.rs  diagnostics.rs  fmt.rs  grammar.rs  hello.rs  laws.rs  linking.rs  linking_sweep.rs  oracle.rs  parsing.rs  rendering.rs  resolution.rs  routing.rs  schema.rs  validation.rs  wiring.rs  wiring_sweep.rs
tests/rendering/: assets.rs  charts.rs  links.rs  main.rs  paint.rs  shapes.rs  text.rs
tests/snapshots/: conformance__snapshot_baked_svg_for_every_sample@anchors.lini.snap  conformance__snapshot_baked_svg_for_every_sample@captions.lini.snap  (+103 more)
xtask/: Cargo.toml
xtask/src/: fonts.rs  main.rs
(+157 files in other folders)
