[package]
name = "lini"
version = "0.3.0"
edition = "2024"
rust-version = "1.88"
description = "A small, human-readable language for plain-text diagrams that compiles to clean SVG"
license = "MIT"
repository = "https://github.com/monfa-red/lini"
homepage = "https://github.com/monfa-red/lini"
documentation = "https://docs.rs/lini"
readme = "README.md"
keywords = ["diagram", "svg", "dsl", "diagrams-as-code", "graph"]
categories = ["command-line-utilities", "visualization"]

[[bin]]
name = "lini"
path = "src/main.rs"

[lib]
name = "lini"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.6", features = ["derive"] }

[dev-dependencies]
insta = { version = "1.47", features = ["glob"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
