[package]
name = "lini"
version = "0.12.1"
edition = "2024"
rust-version = "1.88"
description = "Pretty diagrams from plain text, with fine-grained control. Compiles to clean, themeable SVG."
license = "MIT"
repository = "https://github.com/monfa-red/lini"
homepage = "https://github.com/monfa-red/lini"
documentation = "https://docs.rs/lini"
readme = "README.md"
keywords = ["diagram", "svg", "dsl", "diagrams-as-code", "graph"]
categories = ["command-line-utilities", "visualization"]

[[bin]]
name = "lini"
path = "src/main.rs"

[lib]
name = "lini"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.6", features = ["derive"] }

[features]
default = ["icons"]
# Embed the Phosphor icon set (assets/phosphor-duotone.txt). On by default;
# `--no-default-features` drops it for a lean binary (then `|icon|` errors).
icons = []

[dev-dependencies]
insta = { version = "1.47", features = ["glob"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

# `xtask` holds repo tooling (icon extraction, future font embedding). It is not
# part of the published crate; default-members keeps `cargo build/test` on lini.
[workspace]
members = ["xtask"]
default-members = ["."]
