[package]
name = "lini"
version = "1.0.0-alpha.4"
edition = "2024"
rust-version = "1.88"
description = "Pretty diagrams, charts, and technical drawings from plain text, with fine-grained control. Compiles to clean, themeable SVG."
license = "MIT"
repository = "https://github.com/monfa-red/lini"
homepage = "https://github.com/monfa-red/lini"
documentation = "https://docs.rs/lini"
readme = "README.md"
keywords = ["diagram", "svg", "dsl", "diagrams-as-code", "graph"]
categories = ["command-line-utilities", "visualization"]
# Raw font sources are xtask input only (the committed subsets/metrics are the
# shipped artifacts) — keep the ~8 MB out of the published crate.
exclude = ["assets/fonts/raw"]

[[bin]]
name = "lini"
path = "src/main.rs"

[lib]
name = "lini"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
ttf-parser = { version = "0.25", optional = true }

[features]
default = ["icons", "font"]
# Embed the Phosphor icon set (assets/phosphor-duotone.txt). On by default;
# `--no-default-features` drops it for a lean binary (then `|icon|` errors).
icons = []
# Embed the bundled font subsets (assets/fonts/subset/) for `--embed-font` /
# `--static` text outlining. On by default; the metrics tables are always
# compiled in regardless — layout never varies by build flags — so dropping
# this only loses the two font flags, never measurement.
font = ["dep:ttf-parser"]

[dev-dependencies]
insta = { version = "1.47", features = ["glob"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

# `xtask` holds repo tooling (icon extraction, future font embedding). It is not
# part of the published crate; default-members keeps `cargo build/test` on lini.
[workspace]
members = ["xtask"]
default-members = ["."]
